# CodingProjects

./: .envrc  .gitignore  .pre-commit-config.yaml  flake.nix  tags
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
cppProjects/: .envrc
cppProjects/LeetCode/: .clangd  .envrc  CMakeLists.txt  flake.nix
cppprojects/: flake.nix
cppprojects/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
cppprojects/LeetCode/: #main.cpp#  .clangd  .gitignore  CMakeLists.txt
cppprojects/LeetCode/1/: TwoSum.cpp
cppprojects/LeetCode/1160/: countCharacters.cpp
cppprojects/LeetCode/2/: AddTwoNumbers.cpp  a.out
cppprojects/LeetCode/3/: CMakeCache.txt  CMakeLists.txt  LongestSubstring.cpp  Makefile  cmake_install.cmake
cppprojects/LeetCode/4/: Median.cpp
cppprojects/LeetCode/823/: BinaryTreesWithFactors.h
cppprojects/LeetCode/solved/1-solved/: a.out
cppprojects/LeetCode/solved/1396-solved/: DesignUndergroundSystem.cpp
cppprojects/LeetCode/solved/2-solved/: AddTwoNumbers.h
cppprojects/LeetCode/unsolved/1160/: countCharacters.cpp
cppprojects/LeetCode/unsolved/3/: Longest
cppprojects/LeetCode/unsolved/5/: LongestPalindrome.cpp
cppprojects/LeetCode/unsolved/823/: BinaryTreesWithFactors.cpp
flakeModules/: devenv-shells.nix  devenv.nix  hooks.nix  treefmt.nix
pythonProjects/: flake.nix
pythonProjects/.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  (+1 more)
rustProjects/: .envrc  flake.nix
rustprojects/: .gitignore  flake.nix
zigProjects/: .envrc
(+18 files in other folders)
